# personal-finance-app

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: validate.yml
entrypoint/: __main__.py  app.py  budget_actuals.py  common.py  config.py  main.py  mockdata.py  page_actuals.py  page_budget.py  src_stake.py  upbank.py
entrypoint/pages/: actuals.py  budget.py  settings.py
entrypoint/sources/: mockdata.py  upbank.py
