[project]
name = "personal-finance-app"
version = "0.1.0"
description = "Personal finance app to help track assets/liabilities and income/expenses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb~=1.1.0",
    "faker>=30.6.0",
    "numpy>=2.1.2",
    "pandantic>=0.3.1",
    "pandas>=2.2.3",
    "plotly~=5.24.1",
    "pydantic~=2.9.2",
    "python-dotenv~=1.0.1",
    "requests>=2.32.3",
    "streamlit~=1.39.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "pytest>=8.3.1",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]


